flux/manifests/04-apps/artificial-intelligence/k8sgpt/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: k8sgpt-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
